--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  display: flex;
 }
 
 .App-logo {
@@ -35,4 +36,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 1.5rem;
+}
+
+.banner {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+#date {
+  display: flex;
+  flex-direction: row;
+}
+
+#title {
+  display: flex;
+  flex-direction: row;
+}
+
+#content {
+  width: 300px;
+  height: 200px;
+  margin: 1rem;
+}
+
+#past-date {
+  background-color: red;
 }
